# GovNewsAgent

./: .env  .gitignore  README.md  main.py  pyproject.toml
old_code/: ChromaDBHandler.py  DocumentGenerator.py  writeReport.py
tools/: ChromaDBHandler.py  ContentEmbedder.py  DataProcessor.py  DocumentGenerator.py  LLMSummarizer.py  NewsCrawler.py  NewsFetcher.py  PGVectorNewsStore.py  QueryParser.py  States.py  SummaryGenerator.py  logger.py  writeReport.py
