[project]
name = "govnewsagent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bs4>=0.0.2",
    "crawl4ai>=0.8.6",
    "dotenv>=0.9.9",
    "httpx>=0.28.1",
    "ollama>=0.6.1",
    "pgvector>=0.4.2",
    "psycopg[binary]>=3.3.3",
    "pydantic>=2.12.5",
]
