[project]
name = "govnewsagent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.13.5",
    "bs4>=0.0.2",
    "crawl4ai>=0.8.6",
    "dotenv>=0.9.9",
    "markdown>=3.10.2",
    "ollama>=0.6.1",
    "pgvector>=0.4.2",
    "psycopg[binary]>=3.3.3",
    "pydantic>=2.12.5",
]
